# RAVENEA

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: example.py
src/: cid2country.py  downstream_cic.py  downstream_cvqa.py  gdeval.py  helper.py  imageid2captionid.py  inference.py  metrics.py  ret_baseline.py
src/finetune/: data_process.py  localclip.py  localsiglip.py  train.py  trainer.py
